use add-exports in pom.xml instead of script